# Music

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
src/cli/: kern.py  pdmx.py  staffer.py  verovio.py
src/dataset/: __init__.py  layout.py  pdmx.py  pdmx_maker.py  pdmx_stater.py  prepare.py  staffer_datamodule.py  staffer_dataset.py
src/kern/: __init__.py  empty.py  kern_reader.py  parser.py  to_midi.py  typing.py
src/midi/: __init__.py  input.py  output.py  typing.py
src/models/: __init__.py  staffer_loss.py  staffer_model.py  staffer_module.py
src/pdmx/: __init__.py  pdmx.py
src/utils/: __init__.py  imslp.py  json_query.py  kern2mid.py  utils.py  walker.py
src/verovio/: __init__.py  binaries.py  scraper.py  wrapper.py
tests/dataset/: conftest.py  test_layout.py  test_maker.py  test_pdmx.py
tests/kern/: test_fixtures.py  test_parser.py  test_to_midi.py
tests/midi/: test_output.py  test_parser.py  test_typing.py
tests/models/: test_staffer_loss.py
tests/utils/: test_json_query.py  test_utils.py  test_walker.py
tests/verovio/: test_scraper.py
